# noisy-coding

./: .dockerignore  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  LICENSE  README.md  SETUP.md  docker-compose.yml  pyproject.toml
.claude/: settings.json  settings.local.json
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/after-production-release/: SKILL.md
.github/workflows/: ci.yml  release.yml
commands/: setup.md  update.md
dashboard/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
dashboard/.storybook/: main.ts  preview.ts
dashboard/src/: App.vue  env.d.ts  main.ts  types.ts
design-concepts/: glass-mission-control.html  scifi-hud.html
docs/: INSTALL.md  hooks.md  local-development.md  ports.md  voice-pe-architectures.md
hooks/: _agent_identity.py  exec.sh  hooks.json  install.py  mcp_exec.sh  post_tool_use.py  pre_speak.py  pre_tool_use.py  stop.py  user_prompt_submit.py
issues-drafts/: mic-sensitivity.md
scripts/: bump_version.py  dev_daemon.sh  poc_voice_pe.py  smoke_test.py
skills/grok-voice-setup/: SKILL.md
skills/voice-conversations/: SKILL.md
src/grok_voice_mcp/: credentials.py  mobile_server.py  playback.py  server.py  tts.py  tts_stream.py
src/noisy_coding/: config_dir.py  credentials.py  diagnostics.py  mobile_server.py  playback.py  server.py  tts.py  tts_stream.py
tests/unit/: test_audio_cache.py  test_credentials.py  test_diagnostics.py  test_history.py  test_http_character.py  test_http_next.py  test_http_stream.py  test_listener_state.py  test_playback.py  test_pricing.py  test_server_identity.py  test_shell_scripts.py  test_speech.py  test_tab_audio.py  test_tts.py  test_vad.py
(+98 files in other folders)
