[project]
name = "grok-voice-mcp"
version = "0.1.0"
description = "MCP server that speaks short summaries aloud via the Grok (xAI) Voice API"
readme = "README.md"
authors = [
    { name = "Krzysztof Szumny", email = "noisy.pl@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.28.1",
    "numpy>=2.5.1",
    "sounddevice>=0.5.5",
]

[project.scripts]
grok-voice-mcp = "grok_voice_mcp.server:main"
grok-voice-listener = "grok_voice_mcp.listener.daemon:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "respx>=0.23.1",
    "ruff>=0.15.20",
]
