[project]
name = "noisy-coding"
version = "2.5.0"
description = "Voice coding for Claude Code — talk to your agent while it works (Grok/xAI voice backend)"
readme = "README.md"
authors = [
    { name = "Krzysztof Szumny", email = "noisy.pl@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.28.1",
    "numpy>=2.5.1",
    "sounddevice>=0.5.5",
    "websockets>=16.0",
]

[project.scripts]
noisy-coding-mcp = "noisy_coding.server:main"
noisy-coding-listener = "noisy_coding.listener.daemon:main"
noisy-coding-mobile = "noisy_coding.mobile_server:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "respx>=0.23.1",
    "ruff>=0.15.20",
]
